# generated/server/go-server/novellia/go/model_token.go
@@ -3,7 +3,7 @@
  *
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
- * API version: 0.8.0
+ * API version: 0.9.0
  * Contact: contact@rektangularstudios.com
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
@@ -25,6 +25,6 @@ type Token struct {
 	// Short description of token as interpreted by Novellia
 	Description string `json:"description,omitempty"`
 
-	// Onchain metadata
-	Metadata string `json:"metadata,omitempty"`
+	// Onchain metadata attached to the initial mint TX
+	InitialMintTxMetadata string `json:"initial_mint_tx_metadata,omitempty"`
 }
